all routes working plus basic views

--- a/views/songs/edit.hbs
+++ b/views/songs/edit.hbs
@@ -1,8 +1,8 @@
-<h1>Edit Gif</h1>
+<h1>Edit songs</h1>
 <a href="/logout">Logout</a>
-<a href="/gifs">Home Page</a>
+<a href="/songs">Home Page</a>
 
-<form class="" action="/gifs/{{_id}}/update" method="post">  
+<form class="" action="/songs/{{_id}}/update" method="post">
   <label for="url">Add a URL</label>
     <input type="url" name="url" class="url" id="url" value="{{url}}">
 
