--- a/views/songs/new.hbs
+++ b/views/songs/new.hbs
@@ -1,11 +1,12 @@
-<h1>New Artist Playlist</h1>
-  <a href="/logout">Logout</a>    |
-  <a href="/songs">Home Page</a>
-<br>
-<br>
-<br>
-<form class="" action="/songs" method="post">
-  <label for="url">Search for Artist</label>
-    <input type="url" name='url' class="url" id="url" value="">
-  <input type="submit" value="submit">
-</form>
+<div class="container">
+    <h1>Search for an Artist</h1>
+    <a href="/logout">Logout</a>    |
+    <a href="/songs">Home Page</a>
+
+    <p>Type an artist name and click on "Search". Then, click on any album from the results to play 30 seconds of its first track.</p>
+    <form class="" action="/songs" method="post" id="search-form">
+      <input type="text" id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
+      <input type="submit" id="search" class="btn btn-primary" value="Search"/>
+    </form>
+    <div id="results"></div>
+</div>
