--- a/views/songs/new.hbs
+++ b/views/songs/new.hbs
@@ -3,9 +3,9 @@
     <a href="/logout">Logout</a>    |
     <a href="/songs">Home Page</a>
 
-    <p>Type an artist name and click on "Search". Then, click on any album from the results to play 30 seconds of its first track.</p>
+    <p>Type an artist name and click on "Search".</p>
     <form class="" action="/songs" method="post" id="search-form">
-      <input type="text" id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
+      <input type="text" name = 'query' id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
       <input type="submit" id="search" class="btn btn-primary" value="Search"/>
     </form>
     <div id="results"></div>
