--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,9 @@
 @import "reset";
-@import "colors";
+@import "theme";
+@import "colours";
 @import "layout";
 @import "typography";
 @import "header";
 @import "forms";
 @import "buttons";
+@import "theme";
