--- a/views/about.hbs
+++ b/views/about.hbs
@@ -7,7 +7,7 @@
   <body>
     {{{body}}}
     <header>
-    <a href="/songs">Back</a>
+    <a href="/login">Back</a>
   </header>
     <h1>Welcome to ! ! Beats</h1>
     <p>
