--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,11 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <header class="main-header">
+      <h1>! ! Beats</h1>
+    </header>
+    <main class="main">
     {{{body}}}
-
+  </main>
   </body>
 </html>
