--- a/views/register.hbs
+++ b/views/register.hbs
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
+  <nav class="main-nav">
+    <a href="/about" class="links">About </a>
+  </nav>
   <h1>Create a user account here!</h1>
 
   <form action="/register" method="POST">
