--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,236 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+html {
+  background: url(/images/Ddbridg014.JPG) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 400;
+  line-height: 1.45; }
+
+.cover {
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  background-size: cover;
+  margin: 10px; }
+
+.aside {
+  float: right;
+  text-align: justify;
+  border-left: 2px solid #1C1D21;
+  padding-left: 10px; }
+
+html {
+  font-size: 1em; }
+
+body {
+  margin-left: 20px;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 400;
+  line-height: 1.45;
+  background: none;
+  color: #696D7D;
+  margin-left: 20px; }
+
+p {
+  margin-bottom: 1.3em; }
+
+h1, h2, h3, h4 {
+  margin: 1.414em 0 0.5em;
+  font-weight: inherit;
+  line-height: 1.2; }
+
+h1 {
+  margin-top: 0;
+  font-size: 3.998em; }
+
+h2 {
+  font-size: 2.827em; }
+
+h3 {
+  font-size: 1.999em; }
+
+h4 {
+  font-size: 1.414em; }
+
+small, .font_small {
+  font-size: 0.707em; }
+
+ul {
+  list-style: circle; }
+
+table {
+  width: 100%; }
+
+thead {
+  text-align: left;
+  font-weight: bold; }
+
+tr:nth-of-type(even) {
+  background: rgba(0, 0, 0, 0.3); }
+
+blockquote {
+  padding-left: 60px;
+  border-left: #960000 solid 20px;
+  margin-bottom: 20px; }
 
 a {
-  color: #00B7FF;
-}
+  color: #960000;
+  text-decoration: none;
+  transition: 300ms ease all; }
+
+a:hover {
+  border-bottom: 1px solid #960000; }
+
+.main-header {
+  width: 100%;
+  margin-bottom: 20px; }
+
+.main-header h1 {
+  color: #EEF0F2; }
+
+.main-header h3 {
+  color: #696D7D;
+  padding-bottom: 20px;
+  margin-left: 40px;
+  margin-top: -32px; }
+
+.links {
+  float: right;
+  color: #960000;
+  font-size: 22px;
+  margin-right: 20px;
+  margin-top: -30px; }
+
+.links:hover {
+  border-bottom: 1px solid #1C1D21; }
+
+form {
+  width: 30%; }
+
+textarea, input[type='text'] {
+  width: 100%;
+  border: 1px solid #960000;
+  transition: 300ms ease all;
+  outline: none;
+  padding: 20px;
+  margin: 20px;
+  background: none;
+  color: #696D7D;
+  font-size: 20px; }
+
+.new {
+  margin-left: 20px;
+  margin-top: 30px;
+  margin-bottom: 0px;
+  font-size: 18px;
+  color: #696D7D; }
+
+textarea {
+  min-height: 250px; }
+
+label {
+  font-weight: bold; }
+
+textarea, input[type='email'] {
+  width: 100%;
+  border: 1px solid #960000;
+  transition: 300ms ease all;
+  outline: none;
+  padding: 20px;
+  margin: 20px;
+  background: none;
+  color: #696D7D;
+  font-size: 20px; }
+
+textarea, input[type='password'] {
+  width: 100%;
+  border: 1px solid #960000;
+  transition: 300ms ease all;
+  outline: none;
+  padding: 20px;
+  margin: 20px;
+  background: none;
+  color: #696D7D;
+  font-size: 20px; }
+
+input[type='submit'], button {
+  border: 1px solid #960000;
+  color: #960000;
+  border-radius: 3px;
+  padding: 10px;
+  background: #696D7D;
+  font-size: 15px;
+  margin-left: 20px; }
+
+.x {
+  border: 1px solid #960000;
+  color: #960000;
+  border-radius: 10px;
+  padding: 5px;
+  background: #696D7D; }
+
+html {
+  background: url(/images/Ddbridg014.JPG) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: 'Cinzel Decorative', serif;
+  font-weight: 400;
+  line-height: 1.45; }
+
+.cover {
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  background-size: cover;
+  margin: 10px; }
