--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,7 @@
+<nav class="main-nav">
+  <a href="/about" class="links">About </a>
+</nav>
+
 <h2>Please Login</h2>
 
 <form action="/login" method="post">
