--- a/views/songs/new.hbs
+++ b/views/songs/new.hbs
@@ -8,7 +8,7 @@
   </header>
     <p class="new">Type an artist name and click on "Search".</p>
     <form class="" action="/songs" method="post" id="search-form">
-      <input type="text" name = 'query' id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
+      <input type="text" name = 'query' id="query" value="" class="form-control" placeholder="Type an Artist Name"/><br>
       <input type="submit" id="search" class="btn btn-primary" value="Search"/>
     </form>
     <div id="results"></div>
