--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -9,10 +9,10 @@ input[type='submit'], button {
   margin-left: 20px;
 }
 
-.x{
+input[type='submit'], button, .x{
  border: 1px solid $red;
  color: $red;
- border-radius: 10px;
- padding: 5px;
+ border-radius: 50px;
+ padding: 2px 5px 2px 5px;
  background: $ltGr;
 }
