--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,9 @@
 @import "reset";
 @import "theme";
 @import "colours";
+@import "header";
 @import "layout";
 @import "typography";
 @import "header";
 @import "forms";
 @import "buttons";
-@import "theme";
