--- a/views/songs/index.hbs
+++ b/views/songs/index.hbs
@@ -1,11 +1,11 @@
 <body>
 <header class="main-header">
   <nav class="main-nav">
-    <a href="/logout" class="links">Logout </a>
-    <a href="/about" class="links">About </a>
-    <a href="songs/new" class="links">Search for Artists!</a>
-  <h3>Find Images of your Favorite Artists</h3>
+    <a href="songs/new" class="links">Search for Artists!</a>|
+    <a href="/about" class="links"> About</a>|
+    <a href="/logout" class="links"> Logout</a>
   </nav>
+  <h3>Find Images of your Favorite Artists</h3>
 </header>
 
 <aside class="aside">
