--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url(http://fonts.googleapis.com/css?family=Cinzel+Decorative);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -62,9 +63,34 @@ html {
   background-size: cover;
   margin: 10px; }
 
+.main-header {
+  width: 100%;
+  margin-bottom: 20px; }
+
+.main-header h1 {
+  color: #EEF0F2; }
+
+.main-header h3 {
+  color: #696D7D;
+  padding-bottom: 20px;
+  margin-left: 40px;
+  margin-top: -15px; }
+
+.main-nav {
+  float: right; }
+
+.links {
+  color: #960000;
+  font-size: 15px;
+  margin-right: 10px;
+  margin-top: -30px; }
+
+.links:hover {
+  border-bottom: 1px solid #1C1D21; }
+
 .aside {
   float: right;
-  max-width: 15%;
+  max-width: 20%;
   text-align: inherit;
   border-left: 2px solid #1C1D21;
   padding-left: 20px; }
@@ -74,9 +100,6 @@ html {
 
 body {
   margin-left: 20px;
-  font-family: 'Cinzel Decorative', serif;
-  font-weight: 400;
-  line-height: 1.45;
   background: none;
   color: #696D7D;
   margin-left: 20px; }
@@ -142,13 +165,15 @@ a:hover {
   color: #696D7D;
   padding-bottom: 20px;
   margin-left: 40px;
-  margin-top: -32px; }
+  margin-top: -15px; }
+
+.main-nav {
+  float: right; }
 
 .links {
-  float: right;
   color: #960000;
-  font-size: 22px;
-  margin-right: 20px;
+  font-size: 15px;
+  margin-right: 10px;
   margin-top: -30px; }
 
 .links:hover {
@@ -165,14 +190,15 @@ textarea, input[type='text'] {
   padding: 20px;
   margin: 20px;
   background: none;
-  color: #696D7D;
-  font-size: 20px; }
+  color: #EEF0F2;
+  font-size: 20px;
+  font-family: 'Cinzel Decorative', serif; }
 
 .new {
   margin-left: 20px;
   margin-top: 30px;
   margin-bottom: 0px;
-  font-size: 18px;
+  font-size: 15px;
   color: #696D7D; }
 
 textarea {
@@ -189,7 +215,8 @@ textarea, input[type='email'] {
   padding: 20px;
   margin: 20px;
   background: none;
-  color: #696D7D;
+  color: #EEF0F2;
+  font-family: 'Cinzel Decorative', serif;
   font-size: 20px; }
 
 textarea, input[type='password'] {
@@ -200,7 +227,8 @@ textarea, input[type='password'] {
   padding: 20px;
   margin: 20px;
   background: none;
-  color: #696D7D;
+  color: #EEF0F2;
+  font-family: 'Cinzel Decorative', serif;
   font-size: 20px; }
 
 input[type='submit'], button {
@@ -218,20 +246,3 @@ input[type='submit'], button, .x {
   border-radius: 50px;
   padding: 2px 5px 2px 5px;
   background: #696D7D; }
-
-html {
-  background: url(/images/Ddbridg014.JPG) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  font-family: 'Cinzel Decorative', serif;
-  font-weight: 400;
-  line-height: 1.45; }
-
-.cover {
-  width: 300px;
-  height: 300px;
-  display: inline-block;
-  background-size: cover;
-  margin: 10px; }
