--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -2,23 +2,26 @@
   width: 100%;
   margin-bottom: 20px;
 }
-.main-header h1{
+.main-header h1 {
   color: $whte;
 }
 .main-header h3{
   color: $ltGr;
   padding-bottom: 20px;
   margin-left: 40px;
-  margin-top: -32px;
+  margin-top: -15px;
+}
+.main-nav{
+    float:right;
+}
+.links{
+    color: $red;
+    font-size: 15px;
+    margin-right: 10px;
+    margin-top: -30px;
+
 }
 
-.links{
-    float:right;
-    color: $red;
-    font-size: 22px;
-    margin-right: 20px;
-    margin-top: -30px;
-}
 .links:hover{
   border-bottom: 1px solid $dkGr;
 }
