last touches for this evolution

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -6,13 +6,16 @@
   </head>
   <body>
     {{{body}}}
-    <header>
-    <a href="/login">Back</a>
-  </header>
-    <h1>Welcome to ! ! Beats</h1>
-    <p>
-      This app has many possibilities.  It allows you create a playlist based on the tempo of your choice.  Perfect for the:
-    </p>
+    <header class="main-header">
+      <nav class="main-nav">
+        <a class="links" href="/login">Back</a>
+      </nav>
+    </header>
+    <h2>Welcome to ! ! Beats</h>
+    <h4>
+      This is the first evolution of this app.  It allows you to search for an for a favorite artist and returns a series of images. It also shows you a search history.
+    </h4>
+    <p>The next evolution hoped for will allow you to create a playlist based on the tempo of your choice.  Perfect for the:</p>
       <ul>
         <li>runner wanting to have a consistent pace</li>
         <li>the trainer who wants a tempo for their class</li>
