--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -32,7 +32,9 @@ body {
   line-height: 1; }
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+  margin-left: 40px;
+  margin-bottom: 20px; }
 
 blockquote, q {
   quotes: none; }
@@ -82,7 +84,7 @@ html {
 .links {
   color: #960000;
   font-size: 15px;
-  margin-right: 10px;
+  margin-right: 30px;
   margin-top: -30px; }
 
 .links:hover {
@@ -173,7 +175,7 @@ a:hover {
 .links {
   color: #960000;
   font-size: 15px;
-  margin-right: 10px;
+  margin-right: 30px;
   margin-top: -30px; }
 
 .links:hover {
