--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Cinzel+Decorative);
+@import url(https://fonts.googleapis.com/css?family=Cinzel+Decorative);
 
 html {
   background: url(/images/Ddbridg014.JPG) no-repeat center center fixed;
