--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,8 @@
-<nav class="main-nav">
-  <a href="/about" class="links">About </a>
-</nav>
-
+<header class="main-header">
+  <nav class="main-nav">
+    <a href="/about" class="links">About</a>
+  </nav>
+</header>
 <h2>Please Login</h2>
 
 <form action="/login" method="post">
