--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Register</title>
-  <link rel="stylesheet" href="/public/style.css">
-</head>
 <body>
-  <nav class="main-nav">
-    <a href="/about" class="links">About </a>
-  </nav>
+  <header class="main-header">
+    <nav class="main-nav">
+      <a href="/about" class="links">About</a>
+    </nav>
+  </header>
   <h2>Create a user account here!</h2>
 
   <form action="/register" method="POST">
@@ -24,7 +19,6 @@
     <input type="submit" value="Register">
   </form>
 
-  <h3>Already have a user account? Click <a href="/login"><button>HERE</button></a> to login.</h3>
+  <h3>Already have a user account? Click<a href="/login"><button>HERE</button></a> to login.</h3>
 
 </body>
-</html>
